# WeeklyPlannerBackend

./: README.md  pyproject.toml
src/: .env.example  config.py  main.py
src/models/: user.py
